# wcd

./: .gitignore  Cargo.toml  Readme.md  build.rs  config.toml  setenv.sh  stats.db
common/: Cargo.toml
common/src/: config.rs  lib.rs  proto.rs  util.rs
migrations/20170721070659_initial_setup/: down.sql  up.sql
proto/: wcd.proto
src/: config.rs  macros.rs  main.rs
src/cli/: client.rs  mod.rs
src/common/: config.rs  log.rs  mod.rs  proto.rs  util.rs
src/common/grpc/: mod.rs  wcd.rs  wcd_grpc.rs
src/daemon/: cache.rs  control.rs  mod.rs  processor.rs  scheduler.rs  server.rs  stats.rs
src/daemon/processor/: command.rs  mod.rs
src/daemon/processor/playlist/: files.rs  mod.rs
src/stats_analyzer/: main_window.glade  mod.rs
wcd/: Cargo.toml
wcd/src/: control.rs  main.rs  server.rs  util.rs
wcdctl/: Cargo.toml
wcdctl/src/: main.rs
