[package]
name = "wcd"
version = "0.5.0"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]

[features]
default = ["stats-analyzer"]
stats-analyzer = ["gdk-pixbuf", "gtk", "gdk", "cairo-rs", "gtk/v3_20"]

[build-dependencies]
protoc-rust-grpc = "0.2"

[dependencies]
# command-line parsing
clap = "2.25"

# GTK UI
gtk = { version = "0.1", optional = true }
gdk = { version = "0.5", optional = true }
cairo-rs = { version = "0.1", optional = true }
gdk-pixbuf = { version = "0.1", optional = true }

# logging
log = "0.3"

# serialization
serde = "1.0"
serde_derive = "1.0"

# data formats
toml = "0.4"

# networking
grpc = "0.2"
protobuf = "1.4"
futures = "0.1"
futures-cpupool = "0.1"
tls-api = "0.1"

# database
diesel = { version = "0.14", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.14", features = ["sqlite"] }

# various utilities
quick-error = "1.1"
rand = "0.3"
chrono = "0.4"
shellexpand = "1.0"
appdirs = "0.2"
lazy-scoped = "0.1"
parking_lot = "0.4"

[dependencies.log4rs]
version = "0.7"
default-features = false
features = ["console_appender", "pattern_encoder"]
