[package]
name = "wcd-common"
version = "0.2.0"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]

[dependencies]
quick-error = "1.1"
serde = "0.8"
serde_derive = "0.8"
chrono = "0.2"
shellexpand = "1.0"
toml = { version = "0.2", default-features = false, features = ["serde"] }
bincode = { version = "0.6", default-features = false, features = ["serde"] }
